--- a/nr592/schedule_spring2019.Rmd
+++ b/nr592/schedule_spring2019.Rmd
@@ -9,7 +9,7 @@ author: |
 date: |
   | Spring 2019
   | &nbsp;
-  | Last Updated: 2019-03-28
+  | Last Updated: 2019-04-02
   | &nbsp;
 output:
   html_document:
@@ -112,7 +112,10 @@ output:
 
 ### Lectures
 
-* Tuesday, April 2: **Lecture 03** (pdf / Rmd)
+* Tuesday, April 2: **Lecture 03** (pdf / Rmd)  
+    * [Gombe data](https://osf.io/s7d9d/)  
+    * [Prussian horse-kick data](http://www.randomservices.org/random/data/HorseKicks.html)  
+    * [Indo-European folktale data](https://royalsocietypublishing.org/doi/suppl/10.1098/rsos.150645)  
 
 * Thursday, April 4: **Lecture 04** (pdf / Rmd)
 
@@ -295,6 +298,8 @@ output:
 **Ecological Analyses**
 
 Diversity Indices
+
+`diverse` package
 
 Accumulation Curves
 
